--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -103,7 +103,7 @@
                 </a>
             </li>
             <li class="sidebar__item">
-                <a href="#" class="sidebar__item-link">
+                <a href="{% url 'manage_chats' %}" class="sidebar__item-link {{active_chats}}">
                     <span class="material-symbols-outlined">chat</span>
                     <p>Chats</p>
                 </a>
