--- a/static/CSS/LiveChats/chatsStyles.css
+++ b/static/CSS/LiveChats/chatsStyles.css
@@ -1,5 +1,9 @@
 * {
     box-sizing: border-box;
+    user-select: none; 
+    -webkit-user-select: none; 
+    -moz-user-select: none;
+    -ms-user-select: none; 
 }
 
 body, div, ul, li, a, h1, h2, h3, h4, p {
@@ -7,13 +11,12 @@ body, div, ul, li, a, h1, h2, h3, h4, p {
     padding: 0;
 }
 
-
 label, .sidebar__nav {
     user-select: none;
 }
 
 .container {
-    margin: 0; 
+    margin: 0;
     padding: 0; 
 }
 
@@ -21,6 +24,12 @@ label, .sidebar__nav {
     margin: 0;
 }
 
+@media (min-width: 992px) {
+    .container, .container-lg, .container-md, .container-sm {
+        max-width: 100%;
+    }
+}
+ 
 body {
     --bg-color: #fff;
     --sidebar-color: color-mix(in srgb, #000 25%, #fff);
@@ -29,8 +38,14 @@ body {
     --wood: #8B5E3C; 
     background-color: var(--bg-color);
     font-family: Montserrat;
+    display: flex;
+    flex-flow: row nowrap;
 }
- 
+
+
+
+/*  MAIN STYLES  */
+
 main {
     height: 100dvh;
     width: clamp(calc(100dvw - 300px), 80dvw, calc(100dvw - 220px));
@@ -42,14 +57,10 @@ main {
     overflow-y: auto;
 }
 
-main:has(div.hidden) {
-    overflow-y: hidden;
-}
-
 aside:has(input[type="checkbox"]:checked) ~ main {
     width: calc(100dvw - 62px);
 }
-
+ 
 .filter-bar {
     width: 100%;
     height: calc(2rem + 44.78px);
@@ -112,219 +123,27 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     align-items: center;
     padding-right: .75rem;
 }
-
+ 
 .logo {
     height: clamp(15px, calc(10dvh - 5px), 75px);
     width: clamp(42px, calc(28dvh - 5px), 210px);
     margin: 2.5px 0;
 }
 
-.close-formBorrowing {
-    position: absolute;
-    top: calc(calc(2rem + 44.78px) + 10px);
-    margin-left: 15px;
-    color: #fff;
-    font-size: 2.5rem;
-    font-weight: bolder;
-    cursor: pointer;
-    transition: filter .3s;
-}
-
-.close-formBorrowing:hover{
-    filter: drop-shadow(0 0 5px #fff);
-}
-
-.create-borrowing {
-    display: none;
-}
-
-#create-borrowing:checked ~ .create-borrowing {
-    display: flex;
-}
-
-.forms-container form {
-    display: flex;
+.filter-bar__filter-container {
     align-items: center;
     justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: 70dvh;
-    width: 50%;
-    padding: 0 40px;
-    border-radius: 20px;
-    margin: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 50dvh) / 2) 25%;
-    margin-top: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 70dvh) / 2);
-    background-color: var(--sidebar-color);
 }
 
-.forms-container input[type="submit"], .forms-container input[type="button"] {
-    background-color: var(--fb-color);
-    color: #fff;
-    padding: 7px 45px;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    font-family: inherit;
-    font-weight: 600;
-    text-transform: uppercase;
-    cursor: pointer;
-    transition: box-shadow .3s;
-    outline: none;
-}
-
-.forms-container input[type="submit"]:hover, .forms-container input[type="button"]:hover {
-    box-shadow: 7px 7px 0px rgb(100, 166, 231),
-                -7px -7px 0px #335a94;
-}
-
-.forms-container form input, form select, textarea {
-    background-color: #eee;
-    border: none;
-    padding: 10px 15px;
-    font-size: 13px;
-    font-family: inherit;
-    border-radius: 8px;
-    width: 100%;
-    outline: none;
-}
-
-form select {
-    cursor: pointer;
-}
-
-textarea {
-    height: 20dvh;
-    resize: none;
-}
-
-.edit-borrowing div:has(input[type="datetime-local"]) {
-    width: calc(50% - 20px);
-    margin-right: 40px;
-}
-
-.edit-borrowing div:has(input[type="checkbox"]) {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.edit-borrowing div:has(input[type="checkbox"]) {
-    width: calc(50% - 20px);
-    display: flex;
-    justify-content: start;
-    align-items: center;
-}
-
-.edit-borrowing div input[type="checkbox"] {
-    width: 15px;
-    height: 15px;
-}
-
-.forms-container form.create-borrowing div:has(select), .forms-container form.edit-borrowing div:has(select) {
-    width: 100%;
-}
-
-.forms-container form input:focus, form select:focus, textarea:focus {
-    outline: var(--wood) 1px solid;
-}
-
-.forms-container form a {
-    color: #333;
-    text-decoration: none;
-    margin-top: 45px;
-    font-size: .9rem;
-}
-
-.forms-container form a:hover {
-    text-decoration: underline;
-}
-
-.forms-container form > div, .forms-container form > button {
-    width: 100%;
-}
-
-#editStatus {
-    display: block;
-}
-.errorlist {
-    list-style: none;
-}
-
-.errorlist li {
-    color: #e24;
-    font-size: .9rem;
-}
-
-/* TABLE */
-.borrowings-table__container {
-    width: 96%;
-    margin: 1.8% 2%;
+.filter-bar__select-container select {
     background-color: transparent;
-    border-radius: 15px;
-    overflow: hidden;
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
-}
-
-.borrowings-table {
+    border-radius: 5px ;
+    border-color: #fff;
     width: 100%;
-    border-collapse: collapse;
-    border-radius: 15px;
-    overflow: hidden;
-    background-color: #fff;
-}
-
-.borrowings-table thead {
-    background-color: var(--fb-color);
-    color: #fff;
-    text-align: left;
-    font-weight: bold;
-    opacity: 0.8;
-}
-
-.borrowings-table thead th {
-    padding: 12px;
-    font-size: 1rem;
-}
-
-.borrowings-table tbody tr {
-    background-color: #fff;
-    transition: background-color 0.2s;
-}
-
-.borrowings-table tbody tr:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-.borrowings-table td {
-    padding: 12px;
-    border-bottom: 1px solid #ddd;
-}
-
-.borrowings-table td:first-child {
-    text-align: center;
-    font-weight: 600;
-    color: var(--fb-color);
-}
-
-.borrowings-table tbody tr:last-child td {
-    border-bottom: none;
-}
-
-.edit-button {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
     height: 100%;
-    width: 100%;
-    display: grid;
-    place-content: center;
-    font-size: 1.2rem;
-    transition: filter .2s;
 }
 
-.edit-button:hover {
-    filter: drop-shadow(0 0 5px var(--fb-color));
-}
-/* MESSAGES */
+/* MESSAGES STYLES */
 .hidden {
     display: none;
 }
@@ -362,7 +181,7 @@ textarea {
   padding: 12px 16px;
   border-radius: 8px;
   margin-bottom: 10px;
-  box-shadow: 0px 4px 10px rgba(0,0,0,0.15);
+  box-shadow: 0px 4px 10px #0001;
   font-size: 14px;
   animation: slideIn 0.4s ease-out;
   transition: opacity .3s ease, transform .3s ease;
@@ -377,7 +196,7 @@ textarea {
   padding: 12px 16px;
   border-radius: 8px;
   margin-bottom: 10px;
-  box-shadow: 0px 4px 10px rgba(0,0,0,0.15);
+  box-shadow: 0px 4px 10px #0001;
   font-size: 14px;
   animation: slideIn 0.4s ease-out;
   transition: opacity .3s ease, transform .3s ease;
@@ -400,70 +219,6 @@ textarea {
   pointer-events: none;
 }
 
-/* DIALOG TO CREATE GROUP*/
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.6);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2000;
-}
-
-.modal-content {
-    background: var(--sidebar-color);
-    padding: 20px 30px;
-    border-radius: 12px;
-    width: 30%;
-    text-align: center;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-    animation: fadeIn 0.2s ease-in-out;
-}
-
-.modal-form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 15px;
-    margin-top: 10px;
-    height: 400px;
-}
-.modal-buttons {
-    margin-top: 20px;
-    display: flex;
-    justify-content: right;
-    gap: 5%;
-}
-
-.btn-cancel {
-    background: #ccc;
-    border: none;
-    padding: 8px 15px;
-    border-radius: 8px;
-    cursor: pointer;
-}
-
-.btn-confirm {
-    background: var(--fb-color);
-    color: #fff;
-    border: none;
-    padding: 8px 15px;
-    border-radius: 8px;
-    cursor: pointer;
-}
-
-.btn-cancel:hover,
-.btn-confirm:hover {     
-    outline: var(--wood) 1px solid;
-    color: var(--fb-color);
-    background-color: var(--bg-color);
-    font-weight: 600;
-    box-shadow: var(--wood) 0 0 5px; }
-
 @keyframes fadeIn {
     from { opacity: 0; transform: scale(0.9); }
     to   { opacity: 1; transform: scale(1); }
@@ -479,16 +234,9 @@ textarea {
     transform: translateX(0);
   }
 }
-@keyframes move {
-    0%, 49.99% {
-        opacity: 0;
-        z-index: 1;
-    }
-    50%, 100% {
-        opacity: 1;
-        z-index: 5;
-    }
-}
+
+/* MEDIA QUERIES */
+
 @media (max-width: 768px) {
     .logo {
         display: none;
@@ -501,57 +249,8 @@ textarea {
     .sidebar__form {
         display: none;
     }
-}
-
-
-
-@media (max-width: 768px) {
-    .sidebar__form, .filter-bar__filter-container > .filter-bar__logo-container {
-        display: none;
-    }
-    
-    .small-view {
-        display: none;
-    }
-
-    .forms-container form {
-        width: 90%;
-        margin-left: 5%;
-        padding: 0 20px;
-    }
-
-    .forms-container form {
-        height: 65dvh;
-        margin-top: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 65dvh) / 2);
-    } 
-
-    .forms-container form input, form select {
-        margin: 3% 0;
-    }
-
-    .forms-container form div {
-        margin: 1% 0;
-    }
-
-    .close-formBorrowing {
-        position: absolute;
-        top: calc(calc(2rem + 44.78px) + 10px);
-        margin-left: 5%;
-        font-size: 2rem;
-    }
-
-    textarea {
-        height: 25dvh;
-    }
-
-    .forms-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .forms-container form {
-        height: auto;
+    .modal-content {
+        width: 80%; 
     }
 }
 
@@ -561,6 +260,9 @@ textarea {
         height: 80dvh;
         margin-top: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 75dvh) / 2);
     } 
+    .modal-content {
+        width: 65%;
+    }
 }
 
 @media (min-height: 1024px) and (max-width: 1024px) {
@@ -580,4 +282,4 @@ textarea {
     .container, .container-sm {
         max-width: 100%;
     }
-}
+}   
