--- a/templates/LiveChats/chats.html
+++ b/templates/LiveChats/chats.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="{% static '/CSS/ChatLives/chatsStyles.css' %}">
     <title>Chats - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
-    <meta name="description" content="Prestamos Log Inventory">
+    <meta name="description" content="Chats Log Inventory">
     <meta name="author" content="Log Inventory"> 
     <meta name="robots" content="noindex, nofollow">   
 </head>   
-<body>
+<body> 
     {% include 'sideBar.html' with path='manage_chats' profile=profile type=type permissions=permissions active_chats="active"%}
     <main>
         <div class="filter-bar container"> 
