--- a/templates/Users/home.html
+++ b/templates/Users/home.html
@@ -130,7 +130,7 @@
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
                 <i class="bi bi-facebook"></i>
             </button>
-            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
+            <button onclick="window.open('https://www.instagram.com/loginventoryoficial/', '_blank')" type="button" class="btn btn-primary btn-lg btn-floating mx-2">
                 <i class="bi bi-instagram"></i>
             </button>
         </div>
