--- a/templates/LiveChats/chats.html
+++ b/templates/LiveChats/chats.html
@@ -22,7 +22,7 @@
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
-                <div class="filter-bar__select-container col-md-4">
+                <div class="filter-bar__select-container col-md-4 col-12">
                     <select id="chatSelect" class="filter-bar__select-chat">
                       <option value="" selected disabled>Seleccionar chat...</option>
                       {% for subuser in subusers %}
@@ -31,17 +31,14 @@
                     </select>
                 </div>
                 <div class="filter-bar__name col-md-4 col-8">
-                
                 </div>
                 <div class="filter-bar__logo-container col-md-4 col-0">
                     <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="logo" class="logo">
                 </div>
             </div>
         </div>
-        <div class="forms-container">
-        </div>  
         <div class="chat-area">
-            <input type="text" {%  %}>
+            <input type="text" {% if not chat %}disabled{% endif %}>
         </div>
         {% if messages %}
             <div class="messages-container">
