--- a/templates/LiveChats/chats.html
+++ b/templates/LiveChats/chats.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{% static '/CSS/sideBarStyles.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/sideBarSmallStyles.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/LiveChats/chatsStyles.css' %}">
     {% if permissions == "Estudiante" %}
     <link rel="stylesheet" href="{% static '/CSS/sideBarSmallStyles.css' %}">
@@ -21,7 +22,7 @@
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
-                <div class="filter-bar__select-container col-md-3 col-6">
+                <div class="filter-bar__select-container col-md-4 col-6">
                     <select id="chatSelect" class="filter-bar__select-chat">
                       <option value="" selected disabled>Seleccionar chat...</option>
                       {% if permissions == "Estudiante" %}
@@ -32,7 +33,7 @@
                       {% for subuser in subusers %}
                         <option value="{% url 'live_chat' subuser.user.id %}">
                             {{ subuser.user.first_name }} {{ subuser.user.last_name }} - {{ subuser.group.name }}
-                        </option>
+                        </option> 
                       {% endfor %}
                     </select>
                 </div>
@@ -41,13 +42,13 @@
                     <p class="text-center text-white">Chat: {{ receiver }}</p>
                     {% endif %}
                 </div>
-                <div class="filter-bar__logo-container col-md-6 col-0">
+                <div class="filter-bar__logo-container col-md-5 col-0">
                     <img src="{% static '/IMAGES/logo_transparente_blanco.webp' %}" alt="logo" class="logo">
                 </div>
             </div>
         </div>
 
-        <div class="chat-container container mt-4">
+        <div class="chat-container container">
             <div id="chat-log" class="chat-log">
                 {% for message in chat.messages.all %}
                     <div class="message {% if message.sender.username == user.username %}bg-success{% else %} bg-light {% endif %}">
@@ -59,7 +60,7 @@
             </div>
 
             <div class="chat-input mt-3 d-flex">
-                <input id="chat-message-input" type="text" class="form-control me-2" placeholder="Escribe un mensaje...">
+                <input id="chat-message-input" type="text" class="form-control me-2" {% if not chat %}disabled{% endif %} placeholder="Escribe un mensaje...">
                 <button id="chat-message-submit" class="btn btn-primary">
                     <span class="material-symbols-outlined">send</span>
                 </button>
@@ -99,8 +100,9 @@
         }
 
         let time = `{% now "d-m-Y H:i" %}`
-        div.innerHTML = `<span class= "sender">${data.sender}</span>: <span class="text">${data.message}</span> <span class="time">${time}</span>`;
+        div.innerHTML = `<span class= "sender">${data.sender}:</span> <span class="text">${data.message}</span> <span class="time">${time}</span>`;
         log.appendChild(div);
+        log.scrollTop = log.scrollHeight;
     };
 
     document.querySelector("#chat-message-submit").onclick = function() {
