feat: Add login button to hero section and adjust visibility for better user experience

--- a/static/CSS/Users/homeStyles.css
+++ b/static/CSS/Users/homeStyles.css
@@ -129,6 +129,10 @@ h1 {
     overflow: hidden;
 }
 
+.hero__button.login {
+    display: none;
+}
+
 .hero__button:hover {
     outline: none;
 }
@@ -343,6 +347,14 @@ footer {
 
     .hero {
         gap: 8dvh;
+    }
+
+    .hero__button {
+        display: none;
+    }
+
+    .hero__button.login {
+        display: block;
     }
 
     .hero__description {
