--- a/templates/Objects/main.html
+++ b/templates/Objects/main.html
@@ -144,7 +144,7 @@
                     </div>
                 </div>
             {% empty %}
-                <p class="no-objects">No hay objectos todavía</p>
+                <p class="no-objects">No hay objectos registrados aún.</p>
             {% endfor %}
         </div>
         {% if messages %}
