fix rutes of files

--- a/templates/Users/password_reset_confirm.html
+++ b/templates/Users/password_reset_confirm.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     {% if  form == None %} 
-        {% include 'Users/error_400.html' %} 
+        {% include 'error_400.html' %} 
     {%else%}
         <main>
             <div class="info">
