--- a/templates/Users/home.html
+++ b/templates/Users/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="{%static '/CSS/Users/homeStyles.css'%}">
     <title>Log Inventory</title>
-    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp' %}" type="image/webp">
     <meta name="description" content="Home software de inventario Log Inventory">
     <meta name="keywords" content="Log Inventory, software inventario, inventario instituciones, software de inventario online, sistema de inventario para colegios, gestión de inventario">
     <meta name="author" content="Log Inventory">
@@ -124,7 +124,7 @@
         </div>
         <section class="logos">
             <img src="{%static '/IMAGES/Gabo.webp'%}" alt="Logo I.E Gabo" class="logos__image">
-            <img src="{%static '/IMAGES/SENA.webp'%}" alt="Logo SENA" class="logos__image">
+            <img src="{%static '/IMAGES/sena.webp'%}" alt="Logo SENA" class="logos__image">
         </section>
     </main>
     <footer class="text-center text-lg-start">
