--- a/templates/LiveChats/chats.html
+++ b/templates/LiveChats/chats.html
@@ -111,7 +111,7 @@
 
         }
         let time = `{% now "d-m-Y H:i" %}`
-        div.innerHTML = `<span class= "sender">${data.sender}:</span> <span class="text">${data.message}</span> <span class="time">${time}</span>`;
+        div.innerHTML = `<span class= "sender">${sender}:</span> <span class="text">${data.message}</span> <span class="time">${time}</span>`;
         log.appendChild(div);
         log.scrollTop = log.scrollHeight;
     };
