--- a/templates/Users/authenticate.html
+++ b/templates/Users/authenticate.html
@@ -61,6 +61,6 @@
     {% endif %}
 
     <script src="{%static '/SCRIPTS/authenticateScript.js'%}"></script>
-
+    <script src="{% static '/SCRIPTS/restrictedCaractersScript.js' %}"></script>
 </body>
 </html>
