--- a/templates/Users/subusers.html
+++ b/templates/Users/subusers.html
@@ -116,5 +116,6 @@
     <script src="{%static '/SCRIPTS/subusersScript.js'%}"></script>
     <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
     <script src="{% static '/SCRIPTS/deleteScript.js' %}"></script>
+    <script src="{% static '/SCRIPTS/restrictedCaractersScript.js' %}"></script>
 </body>
 </html>
