--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -168,5 +168,6 @@
     <script src="{%static '/SCRIPTS/subusersGroupScript.js'%}"></script>
     <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
     <script src="{% static '/SCRIPTS/deleteScript.js' %}"></script>
+    <script src="{% static '/SCRIPTS/restrictedCaractersScript.js' %}"></script>
 </body>
 </html>
