feat: Enhance UI with new styles for chat, log, and user pages; add user manual section to home

--- a/static/CSS/GroupStyles.css
+++ b/static/CSS/GroupStyles.css
@@ -699,6 +699,11 @@ input[type="checkbox"].delete-checkbox {
     .modal-content {
         width: 80%;
     }
+
+    .group-image .image-overlay {
+        opacity: 1;
+        background-color: transparent;
+    }
 }
 
 @media (max-height: 840px) and (max-width: 1024px) {
