--- a/static/CSS/sideBarStyles.css
+++ b/static/CSS/sideBarStyles.css
@@ -259,7 +259,7 @@ input[type="checkbox"]:checked ~ label::before, input[type="checkbox"]:checked ~
 
 
 @media (max-width: 768px) {
-    .sidebar__tools > .sidebar__item:last-child {
+    .sidebar__tools > .sidebar__item:has(.delete-object-label) {
         display: none;
     }
 }
