Fix errors: - Erros in groups form and delete confirmation modals - Improve UI in groups views when user use delete various functionality - Fix queryset in edit subprofile form - Delete required into description for objects - Improve UI when open a form and main had scroll

--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -19,7 +19,7 @@
                 <div class="sidebar__item">
                     <label for="create-group" class="sidebar__item-link create-group-label">
                         <span class="material-symbols-outlined">note_stack_add</span>
-                        <p>Crear Grupo</p>
+                        <p>Crear Grupo de Objetos</p>
                     </label>
                 </div>  
                 <div class="sidebar__item">
@@ -46,7 +46,7 @@
                 <div class="sidebar__item">
                     <label for="create-group" class="sidebar__item-link create-group-label">
                         <span class="material-symbols-outlined">group_add</span>
-                        <p>Crear Grupo</p>
+                        <p>Crear Grupo de Usuarios</p>
                     </label>
                 </div> 
                 <div class="sidebar__item">
