--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -62,10 +62,21 @@
                 </div>
             </div>
             <!-- Delete confirmation modal -->
+        	<div id="groupDeleteModal" class="modal-overlay" style="display: none;">
+            	<div class="modal-content">
+            	    <h3>Estás seguro?</h3>
+            	    <p>Esto eliminará permanentemente el grupo seleccionado.</p>
+            	    <div class="modal-buttons">
+            	        <button id="cancelDelete" class="btn-cancel">Cancelar</button>
+            	        <button id="confirmDelete" class="btn-delete">Borrar</button>
+            	    </div>
+            	</div>
+        	</div>
+            <!-- Sidebar delete confirmation modal -->
         	<div id="deleteModal" class="modal-overlay" style="display: none;">
             	<div class="modal-content">
             	    <h3>Estás seguro?</h3>
-            	    <p>Esto eliminará permanentemente el/los grupo/s seleccionado/s.</p>
+            	    <p>Esto eliminará permanentemente los grupos seleccionados.</p>
             	    <div class="modal-buttons">
             	        <button id="cancelDelete" class="btn-cancel">Cancelar</button>
             	        <button id="confirmDelete" class="btn-delete">Borrar</button>
