--- a/templates/activation_email.html
+++ b/templates/activation_email.html
@@ -3,6 +3,6 @@ Hola {{ user.username }},
 Gracias por registrarte con nosotros!  
 Porfavor haz click en el enlace de aquí abajo para activar tu cuenta:
 
-{{ link }}
+{{ activate_link }}
 
 Si tu no has pedido este mensaje, no te preocupes estás a salvo.
