--- a/templates/Objects/main.html
+++ b/templates/Objects/main.html
@@ -97,7 +97,9 @@
                 <input type="submit" value="Crear Grupo" id="create-group-button">
                 <a id="link-button" hidden href="{% url 'manage_subusers' %}"></a>
             </form>
+            {% if permissions == 'admin' %}
             <form action="{% url 'delete' %}" method="POST" id="delete-form" hidden>{% csrf_token %}</form>
+            {% endif %}
             <div id="createGroupModal" class="modal-overlay" style="display: none;">
                 <div class="modal-content">
                     <h3 class="modal-title"></h3>
