--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -49,7 +49,9 @@
                 {{group_form}}
                 <input type="submit" value="Crear Grupo">
             </form>
+            {% if permissions == 'admin' %}
             <form action="{% url 'delete' %}" method="POST" id="delete-form" hidden>{% csrf_token %}</form>
+            {% endif %}
             <!-- Modal to create group if it ain't selected.-->
             <div id="createGroupModal" class="modal-overlay" style="display: none;">
                 <div class="modal-content">
@@ -143,8 +145,10 @@
             </div>
             <form class="group-buttons" method="POST">
                     {% csrf_token %}
+                    {% if permissions == 'admin' %}
                     <input type="submit" value="delete" class="delete-button material-symbols-outlined" id="delete-button-{{form.instance.id}}" form="delete_group_{{form.instance.id}}">
-                    <input type="submit" value="Guardar" class="save-button" form="{{form.instance.id}}_form">
+                    {% endif %}
+                    <input type="submit" value="Guardar" class="save-button {% if permissions == 'Profesor' %}profesores{% endif %}" form="{{form.instance.id}}_form">
                 </form>
             <form method="POST">
                 {% csrf_token %}
