--- a/static/CSS/sideBarStyles.css
+++ b/static/CSS/sideBarStyles.css
@@ -275,10 +275,36 @@ input[type="checkbox"]:checked ~ label::before, input[type="checkbox"]:checked ~
     }
 
     .sidebar__nav > ul {
-        justify-content: space-between;
+        justify-content: space-between; 
     }
 
     .sidebar__profile {
         top: 0;
+    }
+}
+
+@media screen and (min-device-width: 320px) and (max-device-width: 1000px) and (orientation: landscape) {
+    body {
+        overflow-y: scroll;
+        min-height: 600px;
+    }
+    
+    .sidebar {
+        height: auto;
+        overflow-x: hidden;
+        position: relative;
+        padding-top: 20px;
+    }
+
+    .sidebar__form {
+        display: none;
+    }
+
+    .sidebar__nav {
+        flex: 0;
+    }
+
+    .sidebar__profile {
+        top: -5%
     }
 }
