--- a/templates/Borrowings/borrowings.html
+++ b/templates/Borrowings/borrowings.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{% static '/CSS/Borrowings/borrowingsStyles.css' %}">
+    <link rel="stylesheet" href="{%static '/CSS/error.css'%}">
     {% if permissions == "Estudiante" %}
     <link rel="stylesheet" href="{%static '/CSS/sideBarSmallStyles.css'%}">
     {% endif %}
