--- a/templates/Users/subusers.html
+++ b/templates/Users/subusers.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{% static '/CSS/Users/subusersStyles.css' %}">
+    <link rel="stylesheet" href="{%static '/CSS/error.css'%}">
     <title>Manejo de Usuarios - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Subusuarios Log Inventory">
